tests/NormalTests/paczka1/small_fuzzy/71139264.err
Error in line 3: tVRP A332 91,8
Error in line 1: urQ0P S117 76,0
Error in line 10: urQ0P S56 18,8
Error in line 9: eHFI S117 68,3
